--- a/src/Col.css
+++ b/src/Col.css
@@ -124,7 +124,7 @@
 
   border-radius: 4px;
   background-color: rgb(47, 47, 47);
-  padding: 6% 6% 6% 6%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -141,7 +141,7 @@
   background-position: center;
 
   border-radius: 4px;
-  background-color: rgb(47, 47, 47);
+  background-color: rgba(47, 47, 47, 0);
   padding: 6% 6% 6% 6%;
   display: flex;
   flex-direction: column;
@@ -211,10 +211,10 @@
 
 .movie:hover {
   display: flex;
-  opacity: 0.7;
 }
-.movie:hover {
-  display: flex;
+
+.movie:hover .movieInner {
+  background-color: rgba(47, 47, 47, 0.7);
 }
 
 .movie:hover .playButton {
