--- a/src/Upload.css
+++ b/src/Upload.css
@@ -114,6 +114,10 @@ input[type='text'] {
   margin-top: 62px;
 }
 
+input:focus::placeholder {
+  color: transparent;
+}
+
 .minimal-input {
   -webkit-transition: all 125ms ease-out 125ms;
   -moz-transition: all 125ms ease-out 125ms;
