--- a/src/Col.css
+++ b/src/Col.css
@@ -169,17 +169,17 @@
   width: 40px;
   height: 40px;
   margin-right: 16px;
-  background: url('./img/playCircle.svg') no-repeat;
+  /* background: url('./img/playCircle.svg') no-repeat; */
   transition: all 0.5s ease;
-  background-color: rgb(104, 184, 96);
+  /* background-color: rgb(104, 184, 96); */
 }
 
 .playButton:hover {
   width: 40px;
   height: 40px;
 
-  background: url('./img/playHover.svg') no-repeat;
-  background-size: cover;
+  /* background: url('./img/playHover.svg') no-repeat; */
+  /* background-size: cover; */
   /* background-color: blue; */
 }
 
